# Monad-Hackathon-

./: .gitignore  Cargo.toml  DEPLOYMENT.md  QUICK_START.md  README.md  SETUP.md  env.example  hardhat.config.js  package-lock.json  package.json
AI-Engine/: Cargo.toml
AI-Engine/pythonFiles/: llm.py
AI-Engine/src/: api.rs  build.rs  lib.rs  profile.rs
artifacts/contracts/CrushCredits.sol/: CrushCredits.dbg.json  CrushCredits.json
artifacts/contracts/Matchmaker.sol/: Matchmaker.json
artifacts/contracts/ProfileMatcher.sol/: ProfileMatcher.dbg.json  ProfileMatcher.json
artifacts/contracts/UserRegistry.sol/: UserRegistry.json
backend/: README.md  env.example  package-lock.json  package.json
backend/src/: index.js
backend/src/models/: Payment.js  User.js
backend/src/routes/: auth.js  match.js  payment.js  profile.js
backend/src/services/: monadPayment.js
cache/: solidity-files-cache.json
contracts/: CrushCredits.sol  Matchmaker.sol  ProfileMatcher.sol  UserRegistry.sol
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  (+1 more)
frontend/pages/: _app.js  index.js
main_app/backend/: .env  Cargo.toml
main_app/backend/src/: Cargo.toml  api.rs  main.rs
main_app/frontend/: .env
scripts/: check-monad.js  deploy.js  setup-deployment.js  test-deployment.js  uploadEncrypted.js
(+81 files in other folders)
