[package]
name = "ai-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.7"
anyhow = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document"
]

[build-dependencies]
pkg-config = "0.3"  