[package]
name = "monad-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws"] }
ai-engine = { path = "../../AI-Engine" }
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.11.8"
