# filepath: /home/guy_who_likes_to_code/github/Monad-Hackathon-/main_app/backend/Cargo.toml
[package]
name = "monad-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
monad-hackathon = { path = "../.." }
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }